# dmi-copy

./: Cargo.toml
src/: args.rs  main.rs
