[package]
name = "dmi-copy"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "MPL-2.0"
repository = "https://github.com/Absolucy/dmi-copy"

[dependencies]
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dmi = "0.3"
tempfile = "3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "debuginfo"
